--- a/src/sass/pages/_portfolio.scss
+++ b/src/sass/pages/_portfolio.scss
@@ -36,6 +36,10 @@
         color: #996e09;
         margin-top: 15px;
         z-index: 1;
+        @include media(">phone", "<=tablet") {
+            font-size: 4.76rem;
+            font-weight: 700;
+        }
     }
     .portfolio-row-1 {
         background: url(../static/img/1.jpg);
@@ -60,11 +64,15 @@
 .portfolio-row-2 {
     padding-bottom: 0px;
 }
-.portfolio-row-5 {
-    background: black;
+.portfolio-row-2, .portfolio-row-10 {
+    @include media('<=tablet') {
+        padding-top: 15px;
+    }
 }
 .portfolio-row-5 {
     width: 100%;
+    background: black;
+    padding: 0;
     &__wrap {
         width: 85%;
         margin: 0 auto;
@@ -113,6 +121,7 @@
             display: inline-block;
             &:nth-child(2) {
                 font-size: 3vw;
+                font-size: 2.44rem;
             }
         }
         &.quote-text__first-smaller {
@@ -128,12 +137,28 @@
                 }
             }
         }
+        @include media('<=tablet') {
+            font-size: 3.81rem;
+            span {
+                &:nth-child(2) {
+                    font-size: 2.44rem;
+                }
+            }
+            &.quote-text__first-smaller {
+                span {
+                    &:nth-child(1) {
+                        font-size: 2.44rem;
+                    }
+                    &:nth-child(2) {
+                        font-size: 3.81rem;;
+                    }
+                }
+            }
+        }
     }
 }
 .hero-image {
     background-repeat: no-repeat;
-    // background-attachment: fixed;
-    // min-height: 100vh;
     background-size: cover;
     overflow-x: hidden;
     margin: 0;
